# cxx-to-rust

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/pilot_lib_cxx/: CMakeLists.txt
examples/pilot_lib_cxx/include/pilot/: math.hpp
examples/pilot_lib_cxx/src/: math.cpp
examples/pilot_lib_cxx/tests/: test_math.cpp
migrator/: __init__.py  logging_setup.py
migrator/agents/: builder.py  linter.py  planner.py  pr_bot.py  repo_crawler.py  translator.py  verifier.py
migrator/cli/: main.py
rust/: Cargo.toml
rust/crates/pilot_lib_rs/: Cargo.toml
rust/crates/pilot_lib_rs/src/: lib.rs
rust/crates/verifier_harness/: Cargo.toml
rust/crates/verifier_harness/src/: main.rs
tools/: c2rust_wrapper.py  util.py
